--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=apexauth
+
+# ===============================
+# DATABASE
+# ===============================
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA (defaults - overridden by profiles)
+# ===============================
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# JWT
+# ===============================
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
+
+# ===============================
+# SERVER
+# ===============================
+server.port=${SERVER_PORT:8080}
+
+# ===============================
+# ACTIVE PROFILE
+# ===============================
+spring.profiles.active=${SPRING_PROFILE:local}
