--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Environment Files ###
+.env
+.env.local
+.env.dev
+.env.prod
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,3 +37,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Local Properties ###
+/src/main/resources/application-local.properties
