--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
         <scope>runtime</scope>
     </dependency>
 
+    <!-- DotEnv for loading .env files -->
+    <dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 
