--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ DB_PASSWORD=your_db_password
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
+JWT_EXPIRATION_MS=86400000
 
 # Server Configuration
 SERVER_PORT=8080
+
+# Spring Profile (local, dev, prod)
+SPRING_PROFILE=local
+
+# CORS Configuration (comma-separated for multiple origins)
+CORS_ALLOWED_ORIGINS=http://localhost:3000
