--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,3 +14,14 @@ logging.level.org.springframework.security=WARN
 # Production-specific settings
 server.error.include-message=never
 server.error.include-stacktrace=never
+
+# Database Connection Pool (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
+# Security Headers
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
