--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<!-- Spring Boot Actuator for health checks -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 
