--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,18 @@ app.jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
 server.port=${SERVER_PORT:8080}
 
 # ===============================
+# ACTUATOR
+# ===============================
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+management.health.db.enabled=true
+
+# ===============================
+# CORS
+# ===============================
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+
+# ===============================
 # ACTIVE PROFILE
 # ===============================
 spring.profiles.active=${SPRING_PROFILE:local}
