--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # JWT
 # ===============================
 app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
+app.jwt.expiration-ms=${JWT_EXPIRATION_MS:900000}
+app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
 
 # ===============================
 # SERVER
