--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,11 +1,12 @@
-# ApexAuth Environment Variables Template
-# FOR LOCAL JAVA DEVELOPMENT (./mvnw spring-boot:run)
-# Copy to .env and configure
+# Docker Environment Variables Template
+# FOR DOCKER DEVELOPMENT (docker-compose up)
+# Copy to .env.docker and configure
 
 # ===============================
 # DATABASE
 # ===============================
-DB_URL=jdbc:postgresql://localhost:5432/apexauth_db
+# Use host.docker.internal to connect to host machine
+DB_URL=jdbc:postgresql://host.docker.internal:5432/apexauth_db
 DB_USER=your_db_username
 DB_PASSWORD=your_db_password
 
