--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@ target/
 
 ### Environment Files ###
 .env
-.env.local
-.env.dev
-.env.prod
+.env.docker
+*.env
+!.env.example
+!.env.docker.example
 
 ### STS ###
 .apt_generated
@@ -40,3 +41,7 @@ build/
 
 ### Local Properties ###
 /src/main/resources/application-local.properties
+
+### Docker ###
+*.log
+.dockerignore
