Ui  added for testing

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 # Never auto-create tables in production
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 # Minimal logging
 logging.level.com.apexauth.apexauth=WARN
@@ -15,13 +15,12 @@ logging.level.org.springframework.security=WARN
 server.error.include-message=never
 server.error.include-stacktrace=never
 
-# Database Connection Pool (HikariCP)
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
+# Database Connection Pool (Neon serverless optimized)
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
-# Security Headers
-server.servlet.session.cookie.http-only=true
-server.servlet.session.cookie.secure=true
+# Neon-specific settings
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
