--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,29 +1,20 @@
 # Docker Environment Variables Template
-# FOR DOCKER DEVELOPMENT (docker-compose up)
 # Copy to .env.docker and configure
 
-# ===============================
-# DATABASE
-# ===============================
-# Use host.docker.internal to connect to host machine
-DB_URL=jdbc:postgresql://host.docker.internal:5432/apexauth_db
-DB_USER=your_db_username
-DB_PASSWORD=your_db_password
+# Neon PostgreSQL Database
+# Get from: https://console.neon.tech
+DB_URL=jdbc:postgresql://your-host.aws.neon.tech:5432/neondb?sslmode=require
+DB_USER=your_neon_username
+DB_PASSWORD=your_neon_password
 
-# ===============================
-# JWT
-# ===============================
+# JWT Configuration
 JWT_SECRET=generate-random-secret-at-least-32-characters-long
 JWT_EXPIRATION_MS=900000
 JWT_REFRESH_EXPIRATION_MS=604800000
 
-# ===============================
-# SERVER
-# ===============================
+# Server Configuration
 SERVER_PORT=8080
-SPRING_PROFILE=local
+SPRING_PROFILE=prod
 
-# ===============================
-# CORS
-# ===============================
+# CORS Configuration
 CORS_ALLOWED_ORIGINS=http://localhost:3000
