--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -25,15 +25,19 @@ COPY --from=builder /build/target/*.jar app.jar
 # Security: Change ownership
 RUN chown -R appuser:appgroup /app
 
+# Install curl for health checks (Render requirement)
+USER root
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Switch to non-root user
 USER appuser
 
-# Expose port
-EXPOSE 8080
+# Expose port (Render uses PORT env variable)
+EXPOSE ${PORT:-8080}
 
-# Health check with longer startup time
+# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:8080/actuator/health || exit 1
+  CMD curl -f http://localhost:${PORT:-8080}/actuator/health || exit 1
 
 # JVM optimizations for production
 ENTRYPOINT ["java", \
@@ -41,4 +45,5 @@ ENTRYPOINT ["java", \
   "-XX:MaxRAMPercentage=75.0", \
   "-XX:+UseStringDeduplication", \
   "-Djava.security.egd=file:/dev/./urandom", \
+  "-Dserver.port=${PORT:-8080}", \
   "-jar", "app.jar"]
