--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,19 @@
         <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
-    <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <scope>runtime</scope>
-    </dependency>
+    <!-- PostgreSQL Driver (keep for local development) -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- MySQL Driver (for production) -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 
     <!-- JWT library (we'll use this soon) -->
